# rust-aws-lambda

./: .gitignore  Cargo.toml  README.md  slumber.yml
src/: main.rs
