[package]
name = "aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.11.1"

tokio = { version = "1.38.0", features = ["macros"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = {version = "1.0.117"}

dotenvy = "0.15.7"
